Fix #1355 - ActiveMQ View - Frames overlap

--- a/hawtio-fabric8-branding/src/main/webapp/plugin/css/fabric8.css
+++ b/hawtio-fabric8-branding/src/main/webapp/plugin/css/fabric8.css
@@ -1577,6 +1577,7 @@ textarea[readonly] {
 
 .pane {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.05);
+  background: #fff;
 }
 
 .pane-header-wrapper {
