--- a/hawtio-redhat-fuse-branding/src/main/webapp/plugin/css/redhat.css
+++ b/hawtio-redhat-fuse-branding/src/main/webapp/plugin/css/redhat.css
@@ -2336,6 +2336,7 @@ div[ng-controller="Log.LogController"] .logbar .logbar-container {
 
 .pane {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.05);
+  background: #fff;
 }
 
 .pane-header-wrapper {
