--- a/hawtio-web/src/main/webapp/app/themes/css/3270.css
+++ b/hawtio-web/src/main/webapp/app/themes/css/3270.css
@@ -123,6 +123,10 @@ span {
   background: #0f0;    
 }
 
+.pane {
+  background: #000;
+}
+
 .tree-header {
   background: #000;
   color: #0f0;
